--- a/package.json
+++ b/package.json
@@ -1,55 +1,41 @@
 {
-  "name": "choice_coin_voting",
-  "version": "0.1.0",
-  "private": true,
+  "name": "refinevote",
+  "version": "1.0.0",
+  "description": "Choice Coin Voting Platform",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AGASTRONICS/RefinementVote.git"
+  },
+  "keywords": [
+    "Voting",
+    "Coin",
+    "Decentralized"
+  ],
+  "author": "agastronics",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AGASTRONICS/RefinementVote/issues"
+  },
+  "homepage": "https://github.com/AGASTRONICS/RefinementVote#readme",
   "dependencies": {
     "@json-rpc-tools/utils": "^1.7.6",
-    "@pipeline-ui-2/pipeline": "^1.2.7",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@walletconnect/client": "^1.6.6",
+    "@randlabs/myalgo-connect": "^1.1.1",
+    "@walletconnect/client": "^1.7.0",
+    "algorand-qrcode": "^2.1.1",
     "algorand-walletconnect-qrcode-modal": "^1.6.1",
     "algosdk": "^1.12.0",
-    "evergreen-ui": "^6.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
-    "redux-thunk": "^2.4.0",
-    "typescript": "^4.4.4",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.35",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
-    "redux-devtools": "^3.7.0",
-    "redux-devtools-extension": "^2.13.9"
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "path": "^0.12.7",
+    "tslib": "^2.3.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
