--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "algorand-qrcode": "^2.1.1",
     "algorand-walletconnect-qrcode-modal": "^1.6.1",
     "algosdk": "^1.12.0",
+    "chart.js": "^3.6.2",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "ejs": "^3.1.6",
